--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/ResourceEntryEditor.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/ResourceEntryEditor.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.l7tech.console.panels.GlobalSchemaEntryEditor">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.l7tech.console.panels.ResourceEntryEditor">
   <grid id="2fd0b" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="10" bottom="0" right="10"/>
     <constraints>
-      <xy x="39" y="23" width="639" height="643"/>
+      <xy x="39" y="23" width="639" height="667"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -21,7 +21,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="OK"/>
+              <text resource-bundle="com/l7tech/console/panels/ResourceEntryEditor" key="button.ok"/>
             </properties>
           </component>
           <component id="eae04" class="javax.swing.JButton" binding="cancelButton">
@@ -29,7 +29,7 @@
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Cancel"/>
+              <text resource-bundle="com/l7tech/console/panels/ResourceEntryEditor" key="button.cancel"/>
             </properties>
           </component>
           <component id="d3c68" class="javax.swing.JButton" binding="helpButton">
@@ -37,12 +37,13 @@
               <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Help"/>
+              <text resource-bundle="com/l7tech/console/panels/ResourceEntryEditor" key="button.help"/>
             </properties>
           </component>
           <hspacer id="eb791">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <minimum-size width="100" height="-1"/>
                 <preferred-size width="400" height="-1"/>
               </grid>
             </constraints>
@@ -57,7 +58,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="e4ece" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="e4ece" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -65,7 +66,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="6d842" class="javax.swing.JTextField" binding="schemaNameTextField">
+              <component id="6d842" class="javax.swing.JTextField" binding="systemIdTextField">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -78,8 +79,43 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="System ID"/>
+                  <labelFor value="6d842"/>
+                  <text resource-bundle="com/l7tech/console/panels/ResourceEntryEditor" key="label.system-id"/>
                 </properties>
+              </component>
+              <component id="c3112" class="javax.swing.JLabel" binding="publicIdLabel">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <labelFor value="8bf41"/>
+                  <text resource-bundle="com/l7tech/console/panels/ResourceEntryEditor" key="label.public-id"/>
+                </properties>
+              </component>
+              <component id="8bf41" class="javax.swing.JTextField" binding="publicIdTextField">
+                <constraints>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="57c3d" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <labelFor value="48907"/>
+                  <text resource-bundle="com/l7tech/console/panels/ResourceEntryEditor" key="label.description"/>
+                </properties>
+              </component>
+              <component id="48907" class="javax.swing.JTextField" binding="descriptionTextField">
+                <constraints>
+                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
               </component>
             </children>
           </grid>
@@ -93,15 +129,33 @@
         <properties/>
         <border type="none"/>
         <children>
-          <xy id="df172" binding="xmlDisplayPanel" layout-manager="XYLayout" hgap="-1" vgap="-1">
+          <grid id="df172" binding="xmlDisplayPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
-            <children/>
-          </xy>
+            <children>
+              <scrollpane id="4b69e">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <minimum-size width="200" height="100"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <verticalScrollBarPolicy value="20"/>
+                </properties>
+                <border type="none"/>
+                <children>
+                  <component id="76155" class="javax.swing.JTextArea" binding="contentTextArea">
+                    <constraints/>
+                    <properties/>
+                  </component>
+                </children>
+              </scrollpane>
+            </children>
+          </grid>
           <grid id="8a9ee" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
@@ -115,7 +169,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Read URL"/>
+                  <text resource-bundle="com/l7tech/console/panels/ResourceEntryEditor" key="button.read-url"/>
                 </properties>
               </component>
               <component id="fc63a" class="javax.swing.JButton" binding="uploadFromFileBut">
@@ -123,12 +177,13 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Read File"/>
+                  <text resource-bundle="com/l7tech/console/panels/ResourceEntryEditor" key="button.read-file"/>
                 </properties>
               </component>
               <vspacer id="fabef">
                 <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                    <minimum-size width="-1" height="20"/>
                     <preferred-size width="-1" height="440"/>
                   </grid>
                 </constraints>
