--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SchemaValidationPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SchemaValidationPropertiesDialog.form
@@ -352,7 +352,7 @@
                               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                             </constraints>
                             <properties>
-                              <text value="Edit Global XML Schemas"/>
+                              <text value="Manage Global Resources"/>
                             </properties>
                           </component>
                         </children>
