--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/NamespaceMapEditor.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/NamespaceMapEditor.form
@@ -60,7 +60,7 @@
           </component>
         </children>
       </scrollpane>
-      <grid id="942fa" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="942fa" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -95,6 +95,15 @@
             </constraints>
             <properties>
               <text value="Remove"/>
+            </properties>
+          </component>
+          <component id="6be48" class="javax.swing.JButton" binding="removeAllUnusedButton" default-binding="true">
+            <constraints>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Remove All &amp;Unused"/>
+              <toolTipText value="Removes any namespace declarations not visibly used by the current expression"/>
             </properties>
           </component>
         </children>
