--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ResolveForeignJMSEndpoint.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ResolveForeignJMSEndpoint.form
@@ -93,7 +93,7 @@
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Create JMS Queue"/>
+              <text value="Create JMS Destination"/>
             </properties>
           </component>
           <component id="4c7fe" class="javax.swing.JRadioButton" binding="changeRadio">
