--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ResolveExternalSchemaReferencePanel.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ResolveExternalSchemaReferencePanel.form
@@ -3,7 +3,7 @@
   <grid id="46377" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="21" y="9" width="852" height="458"/>
+      <xy x="21" y="9" width="797" height="353"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -118,8 +118,9 @@
           </component>
           <component id="e8dd" class="javax.swing.JComboBox" binding="schemaSelectionComboBox">
             <constraints>
-              <grid row="0" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="1" anchor="4" fill="0" indent="0" use-parent-layout="false">
-                <minimum-size width="200" height="-1"/>
+              <grid row="0" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <minimum-size width="100" height="-1"/>
+                <preferred-size width="200" height="-1"/>
               </grid>
             </constraints>
             <properties/>
