--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/BuildRstrSoapResponsePropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/BuildRstrSoapResponsePropertiesDialog.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="685" height="407"/>
+      <xy x="20" y="20" width="685" height="432"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -44,7 +44,7 @@
           </hspacer>
         </children>
       </grid>
-      <grid id="c3a76" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="c3a76" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -66,6 +66,15 @@
             </constraints>
             <properties>
               <toolTipText value="It is optional to specify a variable prefix."/>
+            </properties>
+          </component>
+          <component id="abf32" class="javax.swing.JLabel" binding="varPrefixStatusLabel">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <icon value="com/l7tech/console/resources/Warning16.png"/>
+              <text value="status"/>
             </properties>
           </component>
         </children>
