--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/CreateSecurityContextTokenPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/CreateSecurityContextTokenPropertiesDialog.form
@@ -6,8 +6,8 @@
       <xy x="20" y="20" width="500" height="160"/>
     </constraints>
     <properties>
-      <minimumSize width="410" height="100"/>
-      <preferredSize width="400" height="100"/>
+      <minimumSize width="410" height="120"/>
+      <preferredSize width="400" height="120"/>
     </properties>
     <border type="none"/>
     <children>
@@ -109,12 +109,12 @@
           </component>
           <component id="7ca6" class="javax.swing.JLabel" binding="varPrefixStatusLabel">
             <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <icon value="com/l7tech/console/resources/Warning16.png"/>
               <text value="status"/>
-              <visible value="false"/>
+              <visible value="true"/>
             </properties>
           </component>
         </children>
