--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/BuildRstrSoapResponsePropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/BuildRstrSoapResponsePropertiesDialog.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="685" height="432"/>
+      <xy x="20" y="20" width="685" height="457"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -111,39 +111,10 @@
                   <text value="Include a &lt;RequestedUnattachedReference&gt; element"/>
                 </properties>
               </component>
-              <grid id="592ce" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
-                <constraints>
-                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties/>
-                <border type="none"/>
-                <children>
-                  <component id="93720" class="javax.swing.JCheckBox" binding="keySizeCheckBox">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <text value="Set key size (bits):"/>
-                    </properties>
-                  </component>
-                  <component id="f206" class="javax.swing.JComboBox" binding="keySizeComboBox">
-                    <constraints>
-                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                        <minimum-size width="100" height="-1"/>
-                      </grid>
-                    </constraints>
-                    <properties>
-                      <editable value="true"/>
-                      <toolTipText value="If this field is enabled, then it is required to specify a positive integer for a key size."/>
-                    </properties>
-                  </component>
-                </children>
-              </grid>
               <grid id="9fe26" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="false"/>
+                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
@@ -204,6 +175,14 @@
                   </component>
                 </children>
               </grid>
+              <component id="93720" class="javax.swing.JCheckBox" binding="keySizeCheckBox">
+                <constraints>
+                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Include a &lt;KeySize&gt; element (when applicable)"/>
+                </properties>
+              </component>
             </children>
           </grid>
           <component id="e7dd2" class="javax.swing.JRadioButton" binding="responseForCancelRadioButton">
